<resources>
    <string name="app_name">Lab4</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_category">Category</string>
    <string name="menu_gifs">GIFs</string>
    <string name="menu_my_favorites">My Favorites</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_more_app">More App</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy Police</string>
</resources>
